--- a/css/main.css
+++ b/css/main.css
@@ -3,33 +3,33 @@ body{
   padding: 25px;
 }
 
-.container {
-  padding: 25px;
-  width: 500px;
+.bold{
+  font-style: oblique;
+}
+
+.grow{
+  font-size: 20px;
+}
+
+.white {
   background-color: white;
-  margin: auto;
-  border-width: 2px;
-  border-radius: 5px;
-  border-color: black;
-  border-style: solid;
-}
-.form{
-  padding: 5px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
 }
 
-.input{
-  width: 98%;
-  margin-bottom: 15px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: black;
-}
-
-.submit{
-  padding: 5px;
-}
-
-.submit:hover{
-  background-color: black;
+h1{
   color: white;
+  font-size: 40px;
+}
+
+h2{
+  font-size: 30px;
+}
+
+.circle {
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  border-radius: 50%;
 }
